--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,20 +1,88 @@
 # Reproducible Research: Peer Assessment 1
+===========================================
+
+This is an R Markdown document. 
+
+## Loading and Preprocessing Data
+
+The following code makes sure that the "activity.csv" file 
+is present in the current working directory. If it is not,
+the file is downloaded. 
+
+```{r}
+if(!file.exists("activity.csv")) {
+      fileUrl <- "https://d396qusza40orc.cloudfront.net/exdata%2Fdata%2Fhousehold_power_consumption.zip"
+      download.file(fileUrl, destfile = "./power.zip", method = "curl")
+      unzip("./power.zip")
+      if(!file.exists("activity.csv")) {
+           message("source data can't be downloaded")
+        }
+}
+```
+
+To load the file into R, use the read.csv command. 
+
+```{r}
+activityData <- read.csv("activity.csv", header = TRUE)
+str(activityData)
+```
+
+As the str(activityData) command shows, the structure of the 
+activityData data frame is three columns: steps, date, interval. 
+
+There are "NA" or missing values present in the data. 
+The date column has been read in as factors. To make
+processing easier, we will gather the different dates 
+into a vector: 
+
+```{r}
+dateVector <- levels(activityData$date)
+str(dateVector)
+```
+
+The "date" information has been read in as factors.
+To make analysis possible we need to convert the dates
+to R date format. 
+
+```{r}
+dateVector <- as.Date(dateVector, format = "%Y-%m-%d")
+activityData$date <- as.Date(activityData$date, format = "%Y-%m-%d")
+```
 
 
-## Loading and preprocessing the data
+## Mean Steps Per Day (ignoring missing data)
+
+The following code computes a vector containing the number of
+steps per day. 
+
+```{r}
+total_day <- sapply(dateVector, function(i) {
+             total_day <- numeric()
+             x_sub <- subset(activityData, date == i)
+             sum_sub <- sum(x_sub$steps, na.rm=TRUE)
+             total_day <- c(total_day, sum_sub)
+}
+)
+```
+
+The following code plots a histogram of total day steps: 
+```{r}
+hist(total_day, breaks = 22, col ="red")
+```
+
+And the mean and median are computed as follows: 
+
+```{r}
+mean_total_steps <- mean(total_day)
+mean_total_steps
+median_total_steps <- median(total_day)
+median_total_steps
+```
+
+## Average Daily Activity
+
+## Iputting Missing Values
+
+## Activity Levels: Weekday Vs. Weekend
 
 
-
-## What is mean total number of steps taken per day?
-
-
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
